--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name" translatable="false">Hand App</string>
+    <string name="app_name" translatable="false">Mirru</string>
     <string name="no_camera_access" translatable="false">Please grant camera permissions.</string>
 
     <!-- Menu items -->
@@ -21,11 +21,16 @@
     <string name="unknown_device">Unknown device</string>
     <string name="unknown_characteristic">Unknown characteristic</string>
     <string name="unknown_service">Unknown service</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="time1">10s</string>
     <string name="time2">20s</string>
     <string name="time3">\infty </string>
+    <string name="title_activity_settings">SettingsActivity</string>
+
+    <!-- Device Name -->
+    <string name="deviceName_title">Your device name</string>
+
+    <!-- Hand Switch Preferences -->
+    <string name="handswitch_title">Record left hand or right hand?</string>
 
 </resources>
